--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 server.port=${PORT:8080}
 
-spring.data.mongodb.host=localhost
+spring.data.mongodb.host=mongo_db
 spring.data.mongodb.port=27017
 spring.data.mongodb.database=products_db
